fix: :lipstick: change padding and spacing header

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,24 +1,29 @@
 header {
   position: fixed;
-  background-color: var(--cinza-claro);
+  background-color: #fdfdfd;
   width: 100%;
+  height: 4.6875rem;
   top: 0;
   display: flex;
   justify-content: space-between;
+  border-bottom: 2px solid #e0e0e0;
   align-items: center;
   padding: 0.8rem 4rem;
   z-index: 50;
 }
 .logo {
-  width: 3.7rem;
+  width: 3.125rem;
 }
 
 nav a {
   position: relative;
   text-decoration: none;
-  color: #292929;
+  font-size: 12pt;
+  color:  #666;
   font-weight: bold;
   padding: 1px 0;
+  line-height: 1.6;
+
 }
 
 .link-header::after {
