--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,98 +1,47 @@
 main {
-  padding: 4rem 0;
+  padding: 4.6875rem 0;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  overflow-x: hidden ;
 }
 
-.carousel-container {
-  width: 80%;
-  max-width: 1000px;
-  position: relative;
-  overflow: hidden;
-  border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-}
-
-.carousel {
-  display: flex;
-  transition: transform 0.5s ease-in-out;
-}
-
-.slide {
-  min-width: 100%;
-  height: 700px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #e9e9e9;
-}
-
-.slide:nth-child(1) {
-  background-color: #ffcdd2;
-}
-.slide:nth-child(2) {
-  background-color: #bbdefb;
-}
-.slide:nth-child(3) {
-  background-color: #c8e6c9;
-}
-.slide:nth-child(4) {
-  background-color: #fff9c4;
-}
-
-.slide img {
+main img:first-child{
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  margin: 0 auto;
 }
 
-.carousel-btn {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: rgba(255, 255, 255, 0.7);
-  border: none;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  cursor: pointer;
-  font-size: 24px;
+.container{
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  transition: all 0.3s ease;
+  gap: 5px;
+  column-gap: 15px;
+  background-color:  #f8f9f5;
+  padding: 4rem;
+  font-family:"Poppins", Arial, Helvetica, sans-serif;
+}
+.container div{
+  width: 50%;
+}
+.container h4{
+  font-size: 22pt;
+  margin-bottom: 30px;
+  color: rgb(46, 70, 52);
+  font-weight: 700;
+  position: relative;
+}
+.container img{
+  border-radius: 10px;
 }
 
-.carousel-btn:hover {
-  background-color: rgba(255, 255, 255, 0.9);
-}
-
-.prev-btn {
-  left: 10px;
-}
-
-.next-btn {
-  right: 10px;
-}
-
-.dots-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 15px;
-  margin-bottom: 12px;
-}
-
-.dot {
-  width: 12px;
-  height: 12px;
-  background-color: #bbb;
-  border-radius: 50%;
-  margin: 0 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.dot.active {
-  background-color: #555;
+@media screen and (width < 700px){
+  .container{
+    flex-direction: column;
+    
+  }
+  .container p {
+    width: 90%;
+    margin-bottom: 4rem;
+  }
 }
