--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -15,3 +15,26 @@ html,
 body {
   width: 100%;
 }
+
+footer{
+  display: flex;
+  justify-content: space-around;
+  position: relative;
+  background: #c8ab7c;
+  padding: 3rem;
+  font-size:10pt;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+}
+
+.copy{
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  bottom: 0.4rem;
+}
+
+footer a{
+  text-decoration: none;
+  color: #111;
+}
