--- a/assets/css/planos.css
+++ b/assets/css/planos.css
@@ -1,5 +1,5 @@
 main {
-  padding: 7rem 0;
+  padding: 4.6875rem  0;
 }
 
 .carousel-container {
